<resources>
    <string name="app_name">BulsuXplore</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="are_you_vis">Are you visiting the university?</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_post">"What's up?"</string>
    <string name="pick_date">"Pick a date"</string>
    <string name="mapbox_access_token">sk.eyJ1Ijoia29taWNoaXdhIiwiYSI6ImNsb21mczQ2ZDIwYmkycm52YzkwY3pndGIifQ.yV9Rqc1vtsY8hoqTX4tJMQ</string>
    <string name="slider1Name">BULSUXPLORE</string>
    <string name="slider2Name">EXPLORE</string>
    <string name="slider3Name">EVENTS</string>
    <string name="slider1Desc">Discover and navigate through different locations within the BulSU Main campus. Whether you are a student trying to find your next class or a visitor exploring the campus for the first time. </string>
    <string name="slider2Desc">Get real-time updates on ongoing events and important news from the main campus, recognized organizations, and colleges.</string>
    <string name="slider3Desc">Whether you are looking for a specific department, facility, or just curious to wander, Xplore helps you effortlessly find your way around main campus. Explore different spots and discover interesting historical details about the buildings on campus..</string>
    <string name="sliderStartdesc">Xplore the Bulsu Main Campus</string>
    <string name="title_activity_screen_slider">ScreenSliderActivity</string>
    <string name="poi1">Federizo Hall</string>
    <string name="subpoi1">College of Science, College of Arts and Letters, College of Architecture</string>
    <string name="desc1">In this building, computer science students suffer sooooo bad. me too :(( </string>
    <string name="poi2">E-library</string>
    <string name="subpoi2">7-storey building</string>
    <string name="desc2">In this building, we tambay  </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_chnage_password">ChnagePasswordActivity</string>
    <string name="title_activity_dash_portal">DashPortalActivity</string>
    <string name="info_1">The Activity Center is a university facility that serves as a venue for various student activities, featuring an open area and stage equipped with sound systems and lighting. It provides opportunities for students to showcase their talents and build community outside of the classroom.</string>
    <string name="info_2">Alvarado Hall is a university building named after a former Bulacan governor, serving as a venue for academic and social events such as conferences, seminars, and exhibits. It features a spacious auditorium, meeting rooms, and exhibit areas with modern facilities to support these events.</string>
    <string name="info_3">The Athletes Building is a university facility that provides accommodations and amenities for student-athletes, such as dormitory-style rooms and a fitness center. It supports the physical and mental well-being of athletes and promotes a healthy and active lifestyle.</string>
    <string name="info_4">Carpio Hall is a university building that serves as the home of the College of Engineering, Architecture, and Fine Arts. It\'s named after a former university president and features modern facilities such as labs, classrooms, and studios to support students\' learning needs in those fields.</string>
    <string name="info_5">The building features modern facilities and equipment, including computer laboratories and a business incubation center. It is a hub for business education and training, providing students with opportunities to develop their skills and knowledge in various areas of business and management.</string>
    <string name="info_6">The College of Criminal Justice Education (CCJE) was created in February 2011. The offering of BA in Legal Management in 2004 and the BS Criminology in 2007 was the precursor of the creation of CCJE as an independent college. Formerly, the Criminology and Legal Management Programs were under the umbrella of the College of Social Sciences and Philosophy under the stewardship of its founding Dean, Dr. Revnaldo S Naauit.</string>
    <string name="info_7">The building is equipped with state-of-the-art facilities such as food science and technology laboratories, a library, and classrooms. It is an essential part of the university\'s infrastructure, providing students with a modern and supportive learning environment to develop their skills and knowledge in the field of home economics.</string>
    <string name="info_8">The BulSU E-Library is a modernized learning resource center that provides access to various digital resources. It aims to support the academic and research needs of the Bulacan State University community by providing a platform for accessing and sharing information in a convenient and efficient way. With its digital resources and modern amenities, the e-Library serves as a hub of innovation and knowledge-sharing within the university.</string>
    <string name="info_9">Federizo Hall is a university building that serves as a multi-purpose facility. It houses classrooms, laboratories, and administrative offices. The building is equipped with state-of-the-art technology and resources to support various academic programs. Federizo Hall also features conference rooms and other event spaces that can accommodate a range of activities.</string>
    <string name="info_10">The building is named after the former Bulacan Governor, Jose Padilla Flores, who made significant contributions to the development of the province. Flores Hall is an important part of the university\'s infrastructure, providing state-of-the-art facilities such as a simulation laboratory and a hotel training center to support the learning needs of students.</string>
    <string name="info_11">The BulSU Hostel is a dormitory situated inside Bulacan State University, offering cost-efficient accommodation for students. It features air-conditioned rooms with private bathrooms and study areas, along with amenities like a lounge area, kitchenette, and laundry room for a comfortable stay.</string>
    <string name="info_12">The College of Law Building is a modern facility that serves as the academic hub for law students. It features classrooms, seminar rooms, a moot court, and a library. The building provides a conducive environment for legal education, fostering critical thinking, research, and advocacy skills among its students.</string>
    <string name="info_13">Mendoza Hall is a university building that houses classrooms, laboratories, and administrative offices. It serves as a hub for academic programs and student services, providing resources and facilities to support teaching, research, and learning. The building features modern facilities and equipment, as well as state-of-the-art technology to support the needs of students, faculty, and staff.</string>
    <string name="info_14">Natividad Hall is the main administrative building of Bulacan State University. It is named after Jose and Natividad Garcia, and serves as the central hub for the university\'s administrative departments, including the offices of the university president and vice presidents. The building features a modern design with traditional elements and is a prominent symbol of the university\'s commitment to academic excellence.</string>
    <string name="info_15">Pimentel Hall is a university building that houses the College of Industrial Technology (CIT) in Bulacan State University. It features modern facilities such as laboratories, workshops, and classrooms, providing students with a conducive environment for hands-on learning in the field of technology. The building is named after a former university president who was instrumental in the development of the CIT program.</string>
    <string name="info_16">Roxas Hall is a building at Bulacan State University named after former Philippine President Manuel Roxas. It houses the College of Industrial Technology and the College of Home Economics, and is equipped with modern amenities such as laboratories and workshops to support learning and research.</string>
    <string name="info_17"> No information Available. </string>
    <string name="info_18">The hall is designed to provide a conducive learning environment that enhances the academic experience of students and faculty members. It is one of the key buildings in the university, serving as a hub for various academic and research activities. Valencia Hall is also a place for students to connect and collaborate, fostering a sense of community and belonging within the university.</string>
    <string name="faq1_question">1. How do I access my student portal and email account?</string>
    <string name="faq2_question">2. What are the registration procedures for the upcoming semester?</string>
    <string name="faq3_question">3. How can I view my class schedule and grades online?</string>
    <string name="faq4_question">4. How do I request official transcripts or other academic records?</string>
    <string name="faq1_answer">To access your student portal, please visit https://bulsu.priisms.online or access it directly through our app. Then, log in using your username and password.</string>
    <string name="faq2_answer">Registration procedures vary by semester. Typically, you will receive an email notification with instructions on how to register for courses online. Make sure to check your university email regularly and follow the deadlines provided.</string>
    <string name="faq3_answer">You can view your class schedule and grades by logging in to the student portal. Once logged in, navigate to the "Academic Records" or "My Schedule" section to access your class schedule and grades for each course.</string>
    <string name="faq4_answer">To request official transcripts or academic records, fill out the transcript request form available on the Registrar\'s Office website and submit it according to the specified instructions.</string>
    <string name="app_answer"><b><big>Application Requirements</big></b>
        \n <li>Two (2) recent 2x2 ID pictures with white background. Computer generated pictures are not allowed.</li>
        \n <li>One (1) photocopy and one (1) original copy of any of the following:
Certificate of Grades or Transcript of Record.</li>
        \n <li>For College Freshmen: Grade 11 Certificate of Grades for First and Second Semeter.</li>
    </string>
    <string name="grade_answer"><b><big>Grade Requirements</big></b>
        \n <li>For courses with Board Examinations - 85% GPA or Higher.</li>
        \n <li>For Bachelor of Industrial Technology - GPA may be lower than 83% but with no failing grades.</li>
        \n <li>For CPTE (Continuing Professional Teacher Education) - Transcript of Records of any completed four-year course.</li>
        \n <li>For Grade 7 - Form 138 (Report Card) of Grade 5 with final rating.</li>

    </string>
</resources>