<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#85f5f5f5"
        android:orientation="vertical"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:backgroundTintMode="screen">


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:layout_marginStart="30dp"
                android:elevation="4dp"
                android:text="Frequently Asked Questions"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/cardView">


            <TextView
                android:id="@+id/Header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="Academic Services"
                android:textSize="23dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/faq1_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/faq1_question"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/faq1_answer"
                android:layout_width="320dp"
                android:justificationMode="inter_word"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/faq1_answer"/>

            <TextView
                android:id="@+id/faq2_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/faq2_question"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/faq2_answer"
                android:layout_width="320dp"
                android:justificationMode="inter_word"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/faq2_answer"/>

            <TextView
                android:id="@+id/faq3_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/faq3_question"

                android:textStyle="bold"/>

            <TextView
                android:id="@+id/faq3_answer"
                android:layout_width="320dp"
                android:justificationMode="inter_word"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/faq3_answer"/>


            <TextView
                android:id="@+id/faq4_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="@string/faq4_question"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/faq4_answer"
                android:layout_width="320dp"
                android:justificationMode="inter_word"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/faq4_answer"/>

  <!--Admission-->
            <TextView
                android:id="@+id/Header2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:justificationMode="inter_word"
                android:text="Admission Requirements"
                android:textSize="23dp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/app1_answer"
                android:layout_width="320dp"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/app_answer"/>

            <TextView
                android:id="@+id/grade_answer"
                android:layout_width="320dp"
                android:layout_marginTop="20dp"
                android:justificationMode="inter_word"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/grade_answer"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>