<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <androidx.cardview.widget.CardView
        android:id="@+id/marker_cardview"
        android:layout_width="307dp"
        android:layout_height="130dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="375dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:elevation="10dp">

        <TextView
            android:id="@+id/poi_name"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18.8dp"
            android:layout_marginTop="13dp"
            android:text="@string/poi1"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/marker_cardview" />

        <TextView
            android:id="@+id/poi_subname"
            android:layout_width="159.77dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18.8dp"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/inter"
            android:text="@string/subpoi1"
            android:textFontWeight="400"
            android:textSize="8sp"
            android:textStyle="italic"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/poi_desc"
            android:layout_width="185dp"
            android:layout_height="22dp"
            android:layout_marginStart="18.8dp"
            android:layout_marginTop="62dp"
            android:text="@string/desc1"
            android:fontFamily="@font/inter"
            android:textSize="9sp"
            android:textStyle="italic"
            android:textColor="@android:color/black" />
        
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/poi_images"
            android:src="@drawable/poi_1"
            android:scaleType="centerCrop"
            android:layout_width="71dp"
            android:layout_height="68dp"
            android:layout_marginStart="214dp"
            android:layout_marginTop="23dp"

            app:shapeAppearanceOverlay="@style/roundImageView"
            />
        
        <Button
            android:id="@+id/poi_expand"
            android:layout_width="84.58dp"
            android:layout_height="26dp"
            android:layout_marginStart="18.8dp"
            android:layout_marginTop="95dp"
            android:text="View More"
            android:textSize="9sp"
            android:textStyle="italic"
            android:singleLine="true"
            android:padding="0dp" />

                <Button
                    android:id="@+id/poi_exit"
                    android:layout_width="10dp"
                    android:layout_height="14dp"
                    android:layout_marginStart="288dp"
                    android:layout_marginTop="6dp"
                    android:backgroundTint="@android:color/transparent"
                    android:drawableEnd="@drawable/icon_exit"
                    android:paddingHorizontal="0dp" />


        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>